# byteflow

./: .gitignore  CMakeLists.txt  COMMERCIAL_ROADMAP.md  README.md  imgui.ini  output_alu.txt  output_optimized.txt  output_optimized_50.txt  output_parser_fix.txt  run.py  run_all_tests.py  run_flow.bat  server.py  test_api.py  test_api2.py  test_open_eda.py  test_output.gds  test_yosys.bat
.github/workflows/: ci.yml
benchmarks/: adder.def  adder.v  adder_load.py  adder_routed.v  alu_32bit.v  alu_32bit_structural.def  alu_32bit_structural.v  alu_32bit_structural_routed.v  alu_rtl.v  bench_200.v  bench_500.v  counter_behavioral.v  counter_structural.def  counter_structural.v  counter_structural_load.py  counter_structural_routed.v  debug.def  dff_chain_rtl.v  full_adder.def  full_adder.spef  full_adder.v  full_adder_layout.gds  full_adder_load.py  full_adder_routed.v  gen_benchmark.py  open_eda.lef  pipeline.v  shift_reg.def  shift_reg.v  shift_reg_load.py  shift_reg_routed.v  shift_reg_sky130.v  simple.lib  simple_techmap.v  sky130_hd.drc  sky130_inv_chain.sdc  sky130_inv_chain.v  soc_sram.def  soc_sram.spef  soc_sram_layout.gds  (+7 more)
cloud_workspace/: input_b030c28f.v  output_0dd1cdd5.gds  output_0dd1cdd5.spef  output_61705e78.gds  output_61705e78.spef  output_7da51e04.gds  output_7da51e04.spef  output_8dedbd1f.gds  output_8dedbd1f.spef  output_9e50aadc.gds  output_9e50aadc.spef  output_c7f01afd.gds  output_c7f01afd.spef  output_e8e77031.gds  output_e8e77031.spef  output_eb5b5d3b.gds  output_eb5b5d3b.spef  output_fb674b8a.gds  output_fb674b8a.spef
include/analysis/: CtsEngine.h  DrcEngine.h  EcoEngine.h  ErcEngine.h  LogicOptimizer.h  LvsEngine.h  PowerEngine.h  SpefEngine.h  StaEngine.h  TimingReporter.h
include/db/: Design.h  LefParser.h  LibertyParser.h  Library.h
include/floorplan/: Floorplanner.h
include/parser/: SdcParser.h  VerilogParser.h
include/place/: AnalyticalPlacer.h  Legalizer.h  PlaceEngine.h
include/route/: GlobalRouter.h  PdnGenerator.h  RouteEngine.h
include/scripting/: TclEngine.h
include/synthesis/: GateSizer.h  SynthEngine.h
include/timer/: Timer.h
include/util/: DefExporter.h  Logger.h  ScriptExporter.h  SvgExporter.h  VerilogWriter.h
src/: main.cpp
src/analysis/: CtsEngine.cpp  DrcEngine.cpp  EcoEngine.cpp  ErcEngine.cpp  LogicOptimizer.cpp  LvsEngine.cpp  PowerEngine.cpp  SpefEngine.cpp  StaEngine.cpp  TimingReporter.cpp
src/cts/: CtsEngine.cpp  CtsEngine.h
src/db/: Design.cpp  LefParser.cpp  LibertyParser.cpp
src/export/: GdsExporter.cpp  GdsExporter.h
src/floorplan/: Floorplanner.cpp
src/gui/: GuiEngine.cpp  GuiEngine.h
src/parser/: SdcParser.cpp  VerilogParser.cpp
src/place/: AnalyticalPlacer.cpp  Legalizer.cpp  PlaceEngine.cpp
src/route/: GlobalRouter.cpp  PdnGenerator.cpp  RouteEngine.cpp
src/scripting/: PyBindings.cpp  TclEngine.cpp
src/synthesis/: GateSizer.cpp  SynthEngine.cpp
src/timer/: Timer.cpp
src/util/: DefExporter.cpp  ScriptExporter.cpp  SvgExporter.cpp  VerilogWriter.cpp
tests/: test_buffer_insertion.py  test_drc.py  test_drc_extended.py  test_eco.py  test_erc.py  test_gate_sizer.py  test_global_router.py  test_incremental_sta.py  test_logic_optimizer.py  test_lvs.py  test_lvs_extended.py  test_mcmm_sta.py  test_placer_scale.py  test_regression.py  test_sdc.py  test_setup_hold.py  test_sky130.py  test_spef_input.py  test_synthesis.py  test_tcl_engine.py  test_timing_reports.py
